tests/snapshots/sqlparser_snapshot__generic__tpch_21.sql.snap
---
source: tests/sqlparser_snapshot.rs
expression: stmts
---
- Query:
    with: ~
    body:
      Select:
        distinct: ~
        top: ~
        projection:
          - UnnamedExpr:
              Identifier:
                value: s_name
                quote_style: ~
          - ExprWithAlias:
              expr:
                Function:
                  name:
                    - value: count
                      quote_style: ~
                  args:
                    - Unnamed: Wildcard
                  filter: ~
                  null_treatment: ~
                  over: ~
                  distinct: false
                  special: false
                  order_by: []
              alias:
                value: numwait
                quote_style: ~
        into: ~
        from:
          - relation:
              Table:
                name:
                  - value: supplier
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: lineitem
                    quote_style: ~
                alias:
                  name:
                    value: l1
                    quote_style: ~
                  columns: []
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: orders
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
          - relation:
              Table:
                name:
                  - value: nation
                    quote_style: ~
                alias: ~
                args: ~
                with_hints: []
                version: ~
                partitions: []
            joins: []
        lateral_views: []
        selection:
          BinaryOp:
            left:
              BinaryOp:
                left:
                  BinaryOp:
                    left:
                      BinaryOp:
                        left:
                          BinaryOp:
                            left:
                              BinaryOp:
                                left:
                                  BinaryOp:
                                    left:
                                      BinaryOp:
                                        left:
                                          Identifier:
                                            value: s_suppkey
                                            quote_style: ~
                                        op: Eq
                                        right:
                                          CompoundIdentifier:
                                            - value: l1
                                              quote_style: ~
                                            - value: l_suppkey
                                              quote_style: ~
                                    op: And
                                    right:
                                      BinaryOp:
                                        left:
                                          Identifier:
                                            value: o_orderkey
                                            quote_style: ~
                                        op: Eq
                                        right:
                                          CompoundIdentifier:
                                            - value: l1
                                              quote_style: ~
                                            - value: l_orderkey
                                              quote_style: ~
                                op: And
                                right:
                                  BinaryOp:
                                    left:
                                      Identifier:
                                        value: o_orderstatus
                                        quote_style: ~
                                    op: Eq
                                    right:
                                      Value:
                                        SingleQuotedString: F
                            op: And
                            right:
                              BinaryOp:
                                left:
                                  CompoundIdentifier:
                                    - value: l1
                                      quote_style: ~
                                    - value: l_receiptdate
                                      quote_style: ~
                                op: Gt
                                right:
                                  CompoundIdentifier:
                                    - value: l1
                                      quote_style: ~
                                    - value: l_commitdate
                                      quote_style: ~
                        op: And
                        right:
                          Exists:
                            subquery:
                              with: ~
                              body:
                                Select:
                                  distinct: ~
                                  top: ~
                                  projection:
                                    - Wildcard:
                                        opt_exclude: ~
                                        opt_except: ~
                                        opt_rename: ~
                                        opt_replace: ~
                                  into: ~
                                  from:
                                    - relation:
                                        Table:
                                          name:
                                            - value: lineitem
                                              quote_style: ~
                                          alias:
                                            name:
                                              value: l2
                                              quote_style: ~
                                            columns: []
                                          args: ~
                                          with_hints: []
                                          version: ~
                                          partitions: []
                                      joins: []
                                  lateral_views: []
                                  selection:
                                    BinaryOp:
                                      left:
                                        BinaryOp:
                                          left:
                                            CompoundIdentifier:
                                              - value: l2
                                                quote_style: ~
                                              - value: l_orderkey
                                                quote_style: ~
                                          op: Eq
                                          right:
                                            CompoundIdentifier:
                                              - value: l1
                                                quote_style: ~
                                              - value: l_orderkey
                                                quote_style: ~
                                      op: And
                                      right:
                                        BinaryOp:
                                          left:
                                            CompoundIdentifier:
                                              - value: l2
                                                quote_style: ~
                                              - value: l_suppkey
                                                quote_style: ~
                                          op: NotEq
                                          right:
                                            CompoundIdentifier:
                                              - value: l1
                                                quote_style: ~
                                              - value: l_suppkey
                                                quote_style: ~
                                  group_by:
                                    Expressions: []
                                  cluster_by: []
                                  distribute_by: []
                                  sort_by: []
                                  having: ~
                                  named_window: []
                                  qualify: ~
                              order_by: []
                              limit: ~
                              limit_by: []
                              offset: ~
                              fetch: ~
                              locks: []
                            negated: false
                    op: And
                    right:
                      Exists:
                        subquery:
                          with: ~
                          body:
                            Select:
                              distinct: ~
                              top: ~
                              projection:
                                - Wildcard:
                                    opt_exclude: ~
                                    opt_except: ~
                                    opt_rename: ~
                                    opt_replace: ~
                              into: ~
                              from:
                                - relation:
                                    Table:
                                      name:
                                        - value: lineitem
                                          quote_style: ~
                                      alias:
                                        name:
                                          value: l3
                                          quote_style: ~
                                        columns: []
                                      args: ~
                                      with_hints: []
                                      version: ~
                                      partitions: []
                                  joins: []
                              lateral_views: []
                              selection:
                                BinaryOp:
                                  left:
                                    BinaryOp:
                                      left:
                                        BinaryOp:
                                          left:
                                            CompoundIdentifier:
                                              - value: l3
                                                quote_style: ~
                                              - value: l_orderkey
                                                quote_style: ~
                                          op: Eq
                                          right:
                                            CompoundIdentifier:
                                              - value: l1
                                                quote_style: ~
                                              - value: l_orderkey
                                                quote_style: ~
                                      op: And
                                      right:
                                        BinaryOp:
                                          left:
                                            CompoundIdentifier:
                                              - value: l3
                                                quote_style: ~
                                              - value: l_suppkey
                                                quote_style: ~
                                          op: NotEq
                                          right:
                                            CompoundIdentifier:
                                              - value: l1
                                                quote_style: ~
                                              - value: l_suppkey
                                                quote_style: ~
                                  op: And
                                  right:
                                    BinaryOp:
                                      left:
                                        CompoundIdentifier:
                                          - value: l3
                                            quote_style: ~
                                          - value: l_receiptdate
                                            quote_style: ~
                                      op: Gt
                                      right:
                                        CompoundIdentifier:
                                          - value: l3
                                            quote_style: ~
                                          - value: l_commitdate
                                            quote_style: ~
                              group_by:
                                Expressions: []
                              cluster_by: []
                              distribute_by: []
                              sort_by: []
                              having: ~
                              named_window: []
                              qualify: ~
                          order_by: []
                          limit: ~
                          limit_by: []
                          offset: ~
                          fetch: ~
                          locks: []
                        negated: true
                op: And
                right:
                  BinaryOp:
                    left:
                      Identifier:
                        value: s_nationkey
                        quote_style: ~
                    op: Eq
                    right:
                      Identifier:
                        value: n_nationkey
                        quote_style: ~
            op: And
            right:
              BinaryOp:
                left:
                  Identifier:
                    value: n_name
                    quote_style: ~
                op: Eq
                right:
                  Value:
                    SingleQuotedString: SAUDI ARABIA
        group_by:
          Expressions:
            - Identifier:
                value: s_name
                quote_style: ~
        cluster_by: []
        distribute_by: []
        sort_by: []
        having: ~
        named_window: []
        qualify: ~
    order_by:
      - expr:
          Identifier:
            value: numwait
            quote_style: ~
        asc: false
        nulls_first: ~
      - expr:
          Identifier:
            value: s_name
            quote_style: ~
        asc: ~
        nulls_first: ~
    limit: ~
    limit_by: []
    offset: ~
    fetch: ~
    locks: []

